Fun stuff and full responsibility

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -998,7 +998,7 @@ input[type="number"].smaller {
 .row input[type="number"] {
 	width          : 100%;
 	margin-top     : 2px;
-	margin-bottom  : 2px;
+	margin-bottom  : 3px;
 	padding-left   : 3px;
 	padding-right  : 2px;
 	padding-bottom : 7px;
@@ -1847,25 +1847,23 @@ tr.fixed td, tr.fixed th {
 	padding-bottom	: 2px;
 }
 
-tr.yellowrow th:first-child {
+tr th:first-child {
 	border-left   : 1px solid var(--dark-yellow);
 }
 
-tr.yellowrow th {
-	padding-top   : 6px;
+tr th {
 	border-top    : 1px solid var(--dark-yellow);
 	border-right  : 1px solid var(--dark-yellow);
 	border-bottom : 2px solid var(--medium-yellow);
 }
 
-tr.yellowrow.rotation th {
+tr.rotation th {
 	border-top:  6px solid var(--lightest-yellow);
 }
 
 th {
-	line-height    : 13px;
 	vertical-align : middle;
-	font-size      : 14px;
+	font-size      : 11px;
 	padding        : 4px;
 	padding-left   : 8px;
 	font-weight    : 600;
@@ -2206,9 +2204,6 @@ thead {
 	border-top: 1px solid var(--dark-red);
 }
 
-.yellowrow  {
-	background-color : var(--lightest-yellow);
-}
 
 .point p {
 	margin      : 0;
@@ -2398,6 +2393,11 @@ div.uploader.widest span.action {
 
 tr.bordertop {
 	border-top: none;
+}
+
+.yellowrow,
+tr {
+	background-color : var(--lightest-yellow);
 }
 
 .bordertop td, .bordertop th {
@@ -4714,7 +4714,6 @@ div.pagefull,
 	justify-content : space-between;
 	margin          : 0;
 	padding         : 0;
-	padding-bottom  : 2px;
 	padding-top     : 2px;
 	width           : 100%;
 	box-sizing      : border-box;
@@ -7321,11 +7320,16 @@ p.reason {
 
 ul .select2-results__options {
 	font-size: 100%;
+	width: 100%;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+	line-height : 24px;
 }
 
 span.select2.select2-container {
-    padding-top    : 3px;
-    padding-bottom : 2.4px;
+    padding-top    : 2.5px;
+    padding-bottom : 3px;
 }
 
 span.dropdown-wrapper {
@@ -7565,21 +7569,23 @@ td.flex.top,
 }
 
 .tablesorter-header-inner {
-	margin      : 0;
-	padding     : 0;
-	width       : 100%;
-	display     : flex;
-    flex-grow   : 1;
-	align-items : center;
-	overflow    : hidden;
+	margin         : 0;
+	padding        : 0;
+	padding-top    : 2px;
+	padding-bottom : 2px;
+	width          : 100%;
+	display        : flex;
+    flex-grow      : 1;
+	align-items    : center;
+	overflow       : hidden;
 }
 
 .fixedheader .tablesorter-header-inner {
-	height      : 1.2em;
-	padding-top : .2em;
-	align-items : flex-start;
-	overflow    : hidden;
-	word-break  : break-word;
+	padding-top    : 2px;
+	padding-bottom : 2px;
+	align-items    : flex-start;
+	overflow       : hidden;
+	word-break     : break-word;
 }
 
 td.flex,
