--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -7343,7 +7343,7 @@ span.dropdown-wrapper {
 
 .select2-container--default .select2-selection--single .select2-selection__arrow {
 	height : 100%;
-	right  : 4%;
+	right  : 2px;
 }
 
 .select2-results {
