why does this not

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -4719,6 +4719,7 @@ div.pagefull,
 	box-sizing      : border-box;
 	align-content   : center;
 	align-items     : start;
+	flex-wrap       : wrap;
 }
 
 div.flexrow.pagefull.rightalign,
