--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1338,14 +1338,14 @@ span.halffixedflex,
 }
 
 .fixedheight {
-	box-sizing     : border-box;
-	height         : 45px !important;
-	margin         : 0;
-	padding        : 0;
-	overflow       : hidden;
-	line-height    : 22px;
-	display        : inline-flex;
-	flex-direction : column;
+	box-sizing      : border-box;
+	height          : 45px !important;
+	margin          : 0;
+	padding         : 0;
+	overflow        : hidden;
+	display         : inline-flex;
+	flex-direction  : column;
+	justify-content : center;
 }
 
 .fixedheight div, .fixedheight .span {
