--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -8349,8 +8349,12 @@ span.halffixedflex,
 		display: none;
 	}
 
-	.sidenote span.half {
-		width : 98%;
+	.flexdouble .quarter {
+		width: 50%;
+	}
+
+	.flexdouble span.half {
+		width : 100%;
 	}
 
 	#footer span.leftlinks a {
@@ -8528,6 +8532,12 @@ span.halffixedflex,
 		width        : 100%;
 	}
 
+	th.single,
+	td.single {
+		max-width: 3em;
+	}
+
+	table.hasResizable,
 	table.unfixed {
 		table-layout : auto;
 	}
@@ -8689,6 +8699,11 @@ span.halffixedflex,
 		padding-top    : 4px;
 		padding-bottom : 8px;
 		margin-top     : 4px;
+	}
+
+	.limit2 {
+		width       : auto;
+		white-space : wrap;
 	}
 
 }
