--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2859,9 +2859,9 @@ h4.button {
 }
 
 a.button {
-	margin: 2.5px 4px 2px;
-	padding: 6px 8px;
-	text-align: center;
+	margin     : 2.5px 4px 2px;
+	padding    : 6px 8px;
+	text-align : center;
 }
 
 a.button.padless,
@@ -5534,7 +5534,7 @@ a.fa p {
 }
 
 .rightalign {
-	text-align : right !important;
+	text-align : right;
 }
 
 .leftalign, a.button.leftalign {
@@ -5546,11 +5546,11 @@ a.fa p {
 }
 
 .rightfloat {
-	float         : right;
+	float : right;
 }
 
 .leftfloat {
-	float         : left;
+	float : left;
 }
 
 .divider {
@@ -6477,7 +6477,7 @@ a.button.padtouchless,
 }
 
 .padleft {
-	padding-left : 8px !important;
+	padding-left : 8px;
 }
 
 .sidenote .flexrow .padleftmore {
@@ -7876,6 +7876,7 @@ span.halffixedflex,
 	padding-bottom   : 4px;
 }
 
+
 @media only screen and (max-width: 1300px) {
 
 	#header {
@@ -8457,10 +8458,6 @@ span.halffixedflex,
 		word-break  : break-word;
 	}
 
-	.smallhide {
-		display : none;
-	}
-
 	.smallfull {
 		width : 100%;
 	}
@@ -8720,6 +8717,55 @@ span.halffixedflex,
 
 	.slick-list, .carousel.row {
 		height     : 80px !important;
+	}
+
+	.flexrow .padleft,
+	.padleft {
+		padding-left: 4px;
+	}
+
+	.row {
+		padding-left  : 4px;
+		padding-right : 4px;
+	}
+
+	.flexkids>label>span,
+	.flexkids>label>div,
+	.flexkids>span,
+	.flexkids>div,
+	.flexfull, .fullflex,
+	.flexfull>div, .fullflex>div,
+	.flexfull>span, .fullflex>span,
+	.flexfull>label>div, .fullflex>label>div,
+	.flexfull>label>span, .fullflex>label>span,
+	.flexrow {
+		.smallfifth {
+			width: 20%;
+		}
+
+		.smallfourfifths {
+			width: 80%;
+		}
+
+		.smallfull {
+			width: 100%;
+		}
+
+		.smallsixsevenths {
+			width: 85.6%;
+		}
+	}
+
+	.smallcenter {
+		text-align : center;
+	}
+
+	.leftalignsmall {
+		text-align : left;
+	}
+
+	.smallhide {
+		display : none !important;
 	}
 }
 
