--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -7471,7 +7471,13 @@ td.flex,
 	align-items : center;
     padding     : 0;
     margin      : 0;
+
+	.smallshow {
+		display: none;
+	}
 }
+
+
 
 
 .pagehalf .row {
