Simpler and happier

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -4804,6 +4804,13 @@ form span.pagehalf:last-child,
 	text-align : left;
 }
 
+.pagehalf span.centeralign, .pagehalf div.centeralign {
+	text-align : center;
+}
+.pagehalf span.rightalign, .pagehalf div.rightalign {
+	text-align : right;
+}
+
 .pagehalf span .slider, .pagehalf div .slider {
 	text-align : center;
 }
