a raft of sadness

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -780,6 +780,27 @@ p {
 	font-size     : 1em;
 }
 
+.flexkids>label>span,
+.flexkids>label>div,
+.flexkids>span,
+.flexkids>div,
+span.flexrow,
+div.flexrow,
+a.flexrow,
+td.flex,
+.flexrow {
+    display     : flex;
+    flex-flow   : row;
+	align-items : center;
+    padding     : 0;
+    margin      : 0;
+
+	.smallshow {
+		display: none;
+	}
+}
+
+
 p.taller {
 	line-height   : 1.8em;
 }
@@ -1239,11 +1260,23 @@ input[type="checkbox"].thin {
 	margin-bottom : 0 !important;
 }
 
-div.full, div.block, span.full, span.block {
+div.full,
+div.block,
+span.full,
+span.block {
 	box-sizing : border-box;
 	width      : 100%;
-	margin     : 0;
-	padding    : 0;
+}
+
+.full, .block {
+	display        : block;
+	width          : 100%;
+	padding        : .5%;
+	margin         : .5%;
+	padding-top    : 8px;
+	padding-bottom : 8px;
+	margin-bottom  : 4px;
+	margin-top     : 4px;
 }
 
 .flexcolumn,
@@ -5128,17 +5161,6 @@ div.padlesskid p {
 	clear : both;
 }
 
-.full, .block {
-	display        : block;
-	width          : 100%;
-	padding        : .5%;
-	margin         : .5%;
-	padding-top    : 8px;
-	padding-bottom : 8px;
-	margin-bottom  : 4px;
-	margin-top     : 4px;
-}
-
 .greenprint,
 .blueprint,
 .redprint {
@@ -6433,6 +6455,13 @@ td.cellmax{
 	margin  : 0 !important;
 }
 
+.nospace.padleft {
+	padding-left : 8px !important;
+}
+.nospace.padright {
+	padding-right : 8px !important;
+}
+
 .inline,
 span.inline,
 p.inline {
@@ -6508,7 +6537,7 @@ a.button.padtouchless,
 	padding-right : 4px !important;
 }
 .padright {
-	padding-right : 8px !important;
+	padding-right : 8px;
 }
 
 .padrightmore {
@@ -6805,7 +6834,6 @@ h6.padsetting {
 	padding-bottom : 17px !important;
 }
 
-
 .padtopmore {
 	padding-top : 16px !important;
 }
@@ -6817,6 +6845,7 @@ h6.padsetting {
 .padbottomless {
 	padding-bottom : 2px !important;
 }
+
 .padbottomno {
 	padding-bottom : 0 !important;
 }
@@ -6825,8 +6854,15 @@ h6.padsetting {
 	padding-bottom : 16px !important;
 }
 
-.padbottom-half {
-	padding-bottom : 4px !important;
+.padtop-half,
+.padtophalf {
+	padding-top : 4px;
+}
+
+
+.padbottom-half,
+.padbottomhalf {
+	padding-bottom : 4px;
 }
 
 .padsmallbottom {
@@ -7465,25 +7501,6 @@ td.noflex {
 	display : table-cell;
 }
 
-.flexkids>label>span,
-.flexkids>label>div,
-.flexkids>span,
-.flexkids>div,
-span.flexrow,
-div.flexrow,
-a.flexrow,
-td.flex,
-.flexrow {
-    display     : flex;
-    flex-flow   : row;
-	align-items : center;
-    padding     : 0;
-    margin      : 0;
-
-	.smallshow {
-		display: none;
-	}
-}
 
 
 
@@ -7703,8 +7720,13 @@ span.halffixedflex,
 .flexfull>label>span, .fullflex>label>span,
 .flexrow {
 
-	padding-left  : 4px;
-	padding-right : 4px;
+	.padleft {
+		padding-left  : 8px;
+	}
+
+	.padright {
+		padding-right : 8px;
+	}
 
 	.half {
 		width : 50%;
