--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -78,6 +78,7 @@ input[type="email"],
 input[type="password"],
 input[type="file"],
 input[type="number"] {
+	box-sizing         : border-box;
 	color              : var(--dark-gray);
 	background-repeat  : no-repeat;
 	font-size          : 100%;
@@ -90,26 +91,18 @@ input[type="number"] {
 	appearance         : none;
 	padding-left       : 4px;
 	padding-right      : 4px;
-	padding-top        : 4px;
-	padding-bottom     : 4px;
+	height             : 28px;
+	background-color   : var(--background-white);
+	margin-top         : 2px;
+	margin-bottom      : 3px;
+	padding-top        : 6px;
+	padding-bottom     : 6px;
 }
 
 input[type="number"].limit {
 	width: 32px !important;
 }
 
-input[type="text"],
-input[type="password"],
-input[type="url"],
-input[type="tel"],
-input[type="email"],
-input[type="number"] {
-	background-color : var(--background-white);
-	margin-top       : 2px;
-	margin-bottom    : 3px;
-	padding-top      : 6px;
-	padding-bottom   : 6px;
-}
 input[type="date"]::-webkit-calendar-picker-indicator {
     margin: 0;
 }
@@ -136,13 +129,6 @@ input[type="number"].smaller {
 	font-size : 66%;
 }
 
-input[type="tel"] {
-	padding-top    : 7.2px;
-	padding-left   : 8px;
-	padding-bottom : 6px;
-	margin-top     : 2px;
-	margin-bottom  : 2px;
-}
 
 input[type="submit"]:disabled {
     background-color    : var(--neutral-gray);
@@ -7577,7 +7563,7 @@ td.flex.top,
 .optionslider {
 	box-sizing    : unset;
 	margin-top    : 1.5px;
-	margin-bottom : 1px;
+	margin-bottom : 1.33px;
 }
 
 .flexbox {
