--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -99,6 +99,10 @@ input[type="number"] {
 	padding-bottom     : 6px;
 }
 
+textarea {
+	height: auto;
+}
+
 input[type="number"].limit {
 	width: 32px !important;
 }
@@ -2710,8 +2714,16 @@ span.ltborderbottom, a.ltborderbottom, div.ltborderbottom {
 	border-bottom    : 1px solid var(--border-gray);
 }
 
+.sidenote a.link-underline,
 .link-underline {
-	text-decoration : underline dashed var(--neutral-gray);
+	text-decoration       : underline dashed;
+	text-underline-offset : 2px;
+}
+
+.sidenote a.link-underline:hover,
+.link-underline:hover {
+	text-decoration       : underline dashed var(--dark-red);
+	text-underline-offset : 2px;
 }
 
 a.plain, a.white {
