Minor delta on the status board header padding

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -8430,6 +8430,14 @@ span.halffixedflex,
 	padding-left: 4px;
 }
 
+#campus_debate th .fa.padleft {
+	padding-left: 8px;
+}
+
+#campus_debate th .fa.padlefthalf {
+	padding-left: 8px;
+}
+
 #campus_debate span.padless {
 	padding: 2px !important;
 }
