--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -866,6 +866,7 @@ a {
 	color           : var(--dark-red);
 	text-decoration : none;
 	display         : inline-block;
+	padding         : 3px;
 }
 
 p strong {
@@ -2728,7 +2729,6 @@ span.ltborderbottom, a.ltborderbottom, div.ltborderbottom {
 
 a.plain, a.white {
 	display       : block;
-	padding       : 3px;
 	margin        : 0;
 	margin-bottom : 2px;
 }
@@ -5867,24 +5867,26 @@ ul.lighter {
 }
 
 ul#tabnav li { /* do not change */
-	background-color	: var(--border-gray);
-	display				: inline-block;
-	padding-top			: 1px;
-	padding-bottom		: 2px;
-	padding-right		: 4px;
-	padding-left		: 4px;
-	border				: 1px solid var(--neutral-gray);
-	margin-top			: 0;
-	margin-left			: 8px;
-	margin-right		: 0; /* set additional spacing between tabs as desired */
-	margin-bottom		: -1px;
+	background-color        : var(--border-gray);
+	display                 : inline-block;
+	padding-top             : 1px;
+	padding-bottom          : 2px;
+	padding-right           : 4px;
+	padding-left            : 4px;
+	border                  : 1px solid var(--neutral-gray);
+	margin-top              : 0;
+	margin-left             : 8px;
+	margin-right            : 0; /* set additional spacing between tabs as desired */
+	margin-bottom           : -1px;
+	border-top-left-radius  : 4px;
+	border-top-right-radius : 4px;
 }
 
 ul#tabnav li a {
-	text-decoration		: none;
-	letter-spacing		: 1px;
-	color				: var(--dark-gray);
-
+	text-decoration : none;
+	letter-spacing  : 1px;
+	color           : var(--dark-gray);
+	padding         : 1px;
 }
 
 ul#tabnav li:hover {
