I am never satisfied

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -790,6 +790,13 @@ td.flex,
 	}
 }
 
+.flexrow span {
+	padding-left: 8px;
+}
+
+.flexspread {
+	justify-content : space-between;
+}
 
 p.taller {
 	line-height   : 1.8em;
