--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -283,7 +283,8 @@ img.badgetiny {
 }
 
 [data-title] {
-    position : relative;
+    position   : relative;
+	overflow-x : auto !important;
 }
 
 .noundies a:hover {
