--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -284,7 +284,7 @@ img.badgetiny {
 
 [data-title] {
     position   : relative;
-	overflow-x : auto !important;
+	overflow-x : unset !important;
 }
 
 .noundies a:hover {
