--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -6521,7 +6521,8 @@ a.button.padtouchless,
 	padding-left : 4px !important;
 }
 
-.padleft {
+.padleft,
+.flexrow.padleft {
 	padding-left : 8px;
 }
 
