Worlds exception was bizarre

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2500,6 +2500,14 @@ div.ltblueborderright {
 	border-right : 1px solid var(--dark-blue);
 }
 
+
+span.ltblueborderbottom,
+div.ltblueborderbottom,
+tr.ltblueborderbottom td,
+tr.ltblueborderbottom th {
+	border-bottom : 1px solid var(--dark-blue);
+}
+
 span.ltbluebordertop,
 div.ltbluebordertop,
 tr.ltbluebordertop td,
@@ -2562,7 +2570,7 @@ p.redbordertop, span.redbordertop, a.redbordertop, div.redbordertop, .redbordert
 	border-top : 2px solid var(--dark-red);
 }
 
-span.ltborderbottom, a.ltborderbottom, div.ltborderbottom {
+.ltborderbottom, span.ltborderbottom, a.ltborderbottom, div.ltborderbottom {
 	border-bottom : 1px solid var(--medium-gray);
 }
 
@@ -2739,6 +2747,10 @@ a.plain, a.white {
 	display       : block;
 	margin        : 0;
 	margin-bottom : 2px;
+}
+
+a.plain.flexrow, a.white.flexrow {
+	display       : flex;
 }
 
 td a.white, td a.plain {
