Some oddness with the import buttons

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -76,7 +76,6 @@ input[type="tel"],
 input[type="url"],
 input[type="email"],
 input[type="password"],
-input[type="file"],
 input[type="number"] {
 	box-sizing         : border-box;
 	color              : var(--dark-gray);
@@ -97,6 +96,12 @@ input[type="number"] {
 	margin-bottom      : 3px;
 	padding-top        : 6px;
 	padding-bottom     : 6px;
+}
+
+input[type="file"] {
+	box-sizing : border-box;
+	width      : 98%;
+	border     : 1px solid var(--border-gray);
 }
 
 textarea {
