things I have better things to do than but did anyway.

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2338,17 +2338,19 @@ span.yellowrow {
 }
 
 div.uploader {
-	width       : 222px;
+	width       : 100%;
 	white-space : nowrap;
+	display     : flex;
 }
 
 div.uploader span.filename {
-	width      : 100px;
+	width      : 66%;
 	text-align : center;
 }
 
 div.uploader span.action {
-	width       : 99px;
+	width       : 33%;
+	min-width   : 99px;
 	line-height : 25px;
 	font-weight : 700;
 	color       : var(--dark-blue);
