Server status with forced floor coming

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1178,6 +1178,10 @@ input[type="button"].thin {
 	font-family    : -apple-system, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
 
+input[type="submit"].thin.semibold {
+	font-weight : 600;
+}
+
 input[type="submit"].thinner {
 	font-size      : 9pt;
 	margin-top     : 2px;
