--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -8632,6 +8632,10 @@ span.halffixedflex,
 	   width: 48px;
 	}
 
+	#nav.checker li a.top_link {
+		width : 48px;
+	}
+
 	#nav li a.top_link span.down {
 		width: 48px;
 		z-index: -1;
