this outlasts that

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -8571,6 +8571,7 @@ span.halffixedflex,
 		padding-top    : 3px;
 		text-align     : center;
 		vertical-align : middle;
+		background     : var(--background-blue);
 	}
 
 	#toprow a.fa-envelope {
