--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -3627,9 +3627,10 @@ a.printbutton,
 }
 
 a.fa-sm {
-	height     : 24px;
-	width      : 24px;
-	text-align : center;
+	height         : 25px;
+	width          : 25px;
+	text-align     : center;
+	vertical-align : middle;
 }
 
 .sidenote a.buttonwhite.fa-smaller,
