Typo. Sweeps revisions. Online ballot setting warning.

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -3070,6 +3070,10 @@ a.buttonwhite.wrap {
     border        : 4px solid var(--dark-red);
 }
 
+.borderorange {
+	border-radius : 8px;
+    border        : 4px solid var(--medium-orange);
+}
 
 .borderredtop {
     border-top : 2px solid var(--dark-red);
