--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -52,9 +52,9 @@
 	--medium-green : #578415;
 	--dark-green   : #365E00;
 
-	--dark-orange  : #C76804;
+	--dark-orange   : #C76804;
 	--medium-orange : #ED7A00;
-	--light-orange   : #F8AD5F;
+	--light-orange  : #F8AD5F;
 
 	--light-purple  : 350144;
 	--medium-purple : #76278C;
@@ -445,6 +445,10 @@ p.onesignal-customlink-explanation.medium {
 #toprow a.redtext {
 	border : 4px solid var(--dark-red);
 	color  : var(--dark-red);
+}
+
+#toprow a#push-bell.redtext {
+	background: linear-gradient(to bottom right, white, white 50%, #ED7A00 50%, #ED7A00);
 }
 
 #toprow a.greentext,
