Up CSS. Access. Auto-destroy and create blast message.

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -921,6 +921,10 @@ button.medium {
     touch-action  : manipulation;
 }
 
+.rounded {
+    border-radius : 4px;
+}
+
 button.medium:hover {
 	opacity : 1;
 	color   : var(--background-white);
