--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1042,16 +1042,9 @@ input[type="number"].smaller {
 	padding-bottom : 5px;
 }
 
-input[type=number]::-webkit-outer-spin-button,
-input[type=number]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
-}
-
 input[type=number] {
-    -moz-appearance:textfield; /* Firefox */
+	appearance:textfield;
 }
-
 
 input[type="number"].half {
 	width : 42px;
@@ -7984,6 +7977,10 @@ span.halffixedflex,
 }
 
 @media only screen and (max-width: 1100px) {
+
+	input[type=number] {
+		appearance: auto;
+	}
 
 	#push-subscribe {
 		right: 12px;
