Roster paradigm viewer

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2157,10 +2157,10 @@ th.nosort, th.hidesort {
 	border-bottom    : 1px solid var(--border-gray) !important;
 }
 
-tr.odd:hover {
+tr.odd:hover:not(.nohover) {
 	background-color : var(--barely-yellow);
 }
-tr.even:hover {
+tr.even:hover:not(.nohover) {
 	background-color: #f7efe3;
 }
 
