Finally found what was doing that to the slider buttons

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -7198,6 +7198,7 @@ h6.padsetting {
 	margin-bottom  : 0px;
 	padding-top    : 0;
 	padding-bottom : 0;
+	line-height    : 24px;
 }
 
 .smaller .slider:before {
@@ -7209,6 +7210,7 @@ h6.padsetting {
 	padding        : 0;
 	padding-top    : 2px;
 	padding-bottom : 1px;
+	line-height    : 16px;
 }
 
 .tiny .slider:before {
@@ -7220,6 +7222,7 @@ h6.padsetting {
 	padding        : 0;
 	padding-bottom : 3px;
 	padding-top    : 0px;
+	line-height    : 12px;
 }
 
 input + .slider.offred {
