Word count limits for paradigms. What a PITA this was to code.

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -3933,6 +3933,14 @@ input[type="checkbox"].nospace {
 	border-bottom : 2px solid var(--border-gray);
 }
 
+.blankalert {
+	border-bottom : 2px solid var(--dark-blue);
+	background    : var(--background-white);
+	text-align    : center;
+	padding       : 2%;
+	margin        : 0;
+}
+
 .blankpart {
 	background : var(--background-white);
 	width      : 100%;
