Better printouts because we still print things out?

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -6717,10 +6717,12 @@ a.button.padtouchless,
 }
 
 .fullheight {
-	height   : 400px;
-	overflow : auto;
-	border   : 1px solid var(--medium-gray);
-	width    : 99%;
+	min-height : 400px;
+	height     : 64vh;
+	overflow   : auto;
+	border     : 1px solid var(--medium-gray);
+	border-top : 1px solid var(--dark-blue);
+	width      : 99%;
 }
 .quarterheight {
 	height   : 20vh;
@@ -7638,6 +7640,10 @@ td.flex.top,
     display   : flex !important;
     flex-flow : column nowrap;
     flex-grow : 1;
+}
+
+.tablesorter-resizable-container {
+	height: auto !important;
 }
 
 .noflex * .tablesorter-header-inner {
