--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2569,6 +2569,10 @@ p.dkborderbottom, span.dkborderbottom, a.dkborderbottom, div.dkborderbottom {
 	border-bottom : 1px solid var(--darker-gray);
 }
 
+p.dkborderleft, span.dkborderleft, a.dkborderleft, div.dkborderleft {
+	border-left : 1px solid var(--darker-gray);
+}
+
 p.borderbottom, span.borderbottom, a.borderbottom, div.borderbottom {
 	border-bottom : 1px solid var(--medium-gray);
 }
