hadn't looked at that screen in a tragic minute

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2239,6 +2239,7 @@ tr.even.oddforce td,
 
 .liblrow.yellowhover:hover, .libl.yellowhover:hover  {
 	background-color : var(--lightest-yellow);
+	border : 1px solid var(--dark-orange);
 }
 
 thead {
@@ -2792,6 +2793,8 @@ td a.white, td a.plain {
 
 .hover:hover {
 	background-color : var(--lightest-blue);
+	border           : 1px solid var(--light-blue);
+	border-radius    : 1px;
 }
 a.white:hover {
 	text-decoration: underline dotted var(--light-blue);
@@ -2814,10 +2817,14 @@ a.white:hover {
 .yellowhover:hover {
 	background-color : var(--light-yellow);
 	color            : var(--dark-gray);
+	border           : 1px solid var(--light-orange);
+	border-radius    : 1px;
 }
 
 .ltyellowhover:hover {
 	background-color : var(--lightest-yellow);
+	border           : 1px solid var(--lightest-orange);
+	border-radius    : 1px;
 }
 
 .yellow,
@@ -2833,6 +2840,7 @@ a.white:hover {
 .yellow .hover:hover {
 	background : var(--medium-yellow);
 	color      : var(--light-gray);
+	border     : 1px solid var(--light-orange);
 }
 
 .yellow:hover,
@@ -5320,6 +5328,12 @@ a.block {
 	flex-basis: 50%;
 	min-width: .01vh;
 }
+
+.resphalf {
+	flex-basis: 50%;
+	min-width: .01vh;
+}
+
 .flexthird {
 	flex-basis: 33.3%;
 	min-width: .01vh;
@@ -7972,6 +7986,12 @@ span.halffixedflex,
 
 
 @media only screen and (max-width: 1300px) {
+
+
+	.resphalf {
+		flex-basis: 100%;
+		min-width: .01vh;
+	}
 
 	#header {
 		width     : 95%;
