Some formatting I noticed.  Limited have access to access for their event.

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2239,7 +2239,7 @@ tr.even.oddforce td,
 
 .liblrow.yellowhover:hover, .libl.yellowhover:hover  {
 	background-color : var(--lightest-yellow);
-	border : 1px solid var(--dark-orange);
+	outline: 1px solid var(--dark-orange);
 }
 
 thead {
@@ -2793,8 +2793,7 @@ td a.white, td a.plain {
 
 .hover:hover {
 	background-color : var(--lightest-blue);
-	border           : 1px solid var(--light-blue);
-	border-radius    : 1px;
+	outline           : 1px solid var(--light-blue);
 }
 a.white:hover {
 	text-decoration: underline dotted var(--light-blue);
@@ -2817,14 +2816,12 @@ a.white:hover {
 .yellowhover:hover {
 	background-color : var(--light-yellow);
 	color            : var(--dark-gray);
-	border           : 1px solid var(--light-orange);
-	border-radius    : 1px;
+	outline           : 1px solid var(--light-orange);
 }
 
 .ltyellowhover:hover {
 	background-color : var(--lightest-yellow);
-	border           : 1px solid var(--lightest-orange);
-	border-radius    : 1px;
+	outline           : 1px solid var(--lightest-orange);
 }
 
 .yellow,
@@ -2840,7 +2837,7 @@ a.white:hover {
 .yellow .hover:hover {
 	background : var(--medium-yellow);
 	color      : var(--light-gray);
-	border     : 1px solid var(--light-orange);
+	outline     : 1px solid var(--light-orange);
 }
 
 .yellow:hover,
@@ -3179,7 +3176,6 @@ a.buttonorange{
 	letter-spacing : 2px !important;
 	font-weight    : 800;
 }
-
 
 .buttonwhite.hover:hover,
 .buttonwhite.hover:hover .fa {
