--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -905,7 +905,6 @@ sup {
 	vertical-align : super;
 }
 
-
 button.medium {
 	font-family   : Signika-Light;
     opacity       : .8;
@@ -2995,15 +2994,18 @@ span.buttonorange,
 a.buttonorange,
 button.buttonwhite,
 span.buttonwhite,
+div.main a.buttonwhite,
 a.buttonwhite {
-	font-weight     : 400;
+	font-size       : 14px;
 	text-decoration : none !important;
-    padding         : 4px;
+    padding-left    : 6px;
+    padding-right   : 6px;
+	font-family     : PTSans-Narrow-Bold;
+    padding-top     : 7px;
+    padding-bottom  : 7px;
     margin          : 2px;
 	vertical-align  : middle;
-	font-family     : -apple-system, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 	letter-spacing  : .7px;
-	font-size       : 16px;
     border-radius   : 4px;
 	opacity         : 1;
 }
@@ -3050,7 +3052,7 @@ a.ltbuttonwhite {
 .buttonwhite.invert {
     background-color : var(--neutral-gray);
 	color            : var(--background-white);
-    border           : 2px solid var(--background-white);
+    border           : 1px solid var(--background-white);
 }
 
 .buttonwhite.fa-lg {
@@ -3398,12 +3400,12 @@ a.buttonwhite.smaller {
 
 .greytext.buttonwhite,
 .graytext.buttonwhite {
-	border           : 2px solid var(--medium-gray);
+	border-color     : var(--medium-gray);
 	background-color : var(--background-white);
 }
 
 .yellowtext.buttonwhite {
-	border : 2px solid var(--dark-yellow);
+	border-color : var(--dark-yellow);
 }
 
 .yellowtext.buttonwhite:hover {
@@ -3495,7 +3497,7 @@ a.buttonwhite.smaller {
 }
 
 .purpletext.buttonwhite {
-	border : 2px solid var(--dark-purple);
+	border-color : var(--dark-purple);
 	background-color : var(--background-white);
 }
 
@@ -3507,7 +3509,7 @@ a.buttonwhite.smaller {
 
 .buttonwhite.browntext {
 	color  : var(--medium-brown);
-	border : 2px solid var(--medium-brown);
+	border-color : var(--medium-brown);
 }
 
 .browntext.invert,
