Fix minor formatting

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1080,7 +1080,7 @@ a.buttonwhite.submit:hover,
 input[type="submit"]:hover,
 input[type="button"]:hover {
     opacity      : .8;
-	border-color : var(--darker-gray);
+	border-color : var(--white);
 }
 
 .row a.submit,
@@ -1174,7 +1174,6 @@ input[type="button"].thin {
 	font-weight    : 400;
 	padding-top    : 3px;
 	padding-bottom : 3px;
-	font-family    : -apple-system, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
 
 input[type="submit"].thin.semibold {
@@ -3579,8 +3578,6 @@ span.buttonwhite.fa-sm.thinner:hover {
 .buttonwhite.thinner,
 .buttonwhite.thinner:hover,
 .buttonwhite.thinner.invert {
-	font-family   : -apple-system, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-	font-size     : 14px;
 	font-weight   : 400;
 	border-width  : 1px;
 	padding       : 4px !important;
