Someone pushed it did they not

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -3628,6 +3628,7 @@ a.printbutton,
 	display         : inline-flex;
 	align-items     : center;
 	justify-content : center;
+	padding         : 4px;
 }
 
 .draggable .fa-sm {
@@ -3684,7 +3685,7 @@ a.buttonwhite.fa-xs,
 
 a.printbutton,
 a.printbutton.buttonwhite {
-	font-size: 18px;
+	font-size : 18px;
 }
 
 .red {
