improved and more efficient public side but not deploying until monday

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -3631,6 +3631,38 @@ a.printbutton,
 	padding         : 4px;
 }
 
+span.buttonwhite.fa-xs,
+button.buttonwhite.fa-xs,
+a.buttonwhite.fa-xs,
+a.buttonwhite .fa-xs,
+div.main .buttonwhite.fa-xs,
+div.main .buttonwhite .fa-xs,
+.buttonwhite.fa-xs,
+.buttonwhite .fa-xs {
+	font-size : 10px;
+	padding   : 3px;
+}
+
+span.buttonwhite.fa-tiny,
+button.buttonwhite.fa-tiny,
+a.buttonwhite.fa-tiny,
+a.buttonwhite .fa-tiny,
+div.main .buttonwhite.fa-tiny,
+div.main .buttonwhite .fa-tiny,
+.buttonwhite.fa-tiny,
+.buttonwhite .fa-tiny {
+	font-size : 8px;
+	padding   : 2px;
+}
+
+icon.fa.greentext {
+	border           : none;
+	background-color : transparent;
+	color            : var(--dark-green);
+	padding          : 0;
+	margin           : 0,
+}
+
 .draggable .fa-sm {
 	font-size: 10px;
 }
@@ -4277,7 +4309,11 @@ td.slidebox.height {
 }
 
 .underline {
-	border-bottom : 2px solid var(--medium-gray);
+	text-decoration-line  : underline;
+	text-decoration-style : solid;
+	text-underline-offset : 3px;
+	text-decoration-thickness: 1px;
+	text-decoration-color : var(--medium-gray);
 }
 
 .ltunderline {
